# Septoria

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bors.toml
.github/workflows/: rust.yml
src/: api.rs  client.rs  data_client.rs  error.rs  lib.rs  util.rs
src/api/: account.rs  market_data.rs  orders.rs  positions.rs  trading.rs
src/api/account/: documents.rs  withdrawals.rs
src/api/market_data/: instruments.rs  venues.rs
src/api/positions/: performance.rs  statements.rs
src/api/trading/: account.rs  positions.rs
src/api/trading/account/: documents.rs  withdrawals.rs
src/api/trading/positions/: performance.rs  statements.rs
