[package]
name = "Septoria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = { version = "1.0.83" }
thiserror = "1.0.32"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
