[package]
name = "septoria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
live = []

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.83" }
thiserror = "1.0.32"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde_urlencoded = "0.7.1"
serde_variant = { git = "https://github.com/d-e-s-o/serde_variant", version = "0.1.1" }


[dev-dependencies]
dotenv = "*"
