[package]
name = "septoria"
authors = ["Uzair Aftab <uzaaft@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "GNU General Public License v3.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
live = []

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
thiserror = "1.0.33"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde_urlencoded = "0.7.1"
serde_variant = { git = "https://github.com/d-e-s-o/serde_variant", version = "0.1.1" }


[dev-dependencies]
dotenv = "*"
